fix: defer키워드 부여 및 위치이동, type="module"추가

--- a/public/vanila.html
+++ b/public/vanila.html
@@ -11,12 +11,12 @@
     />
 
     <title>React Vanilla App</title>
+    <script defer type="module" src="static/vanila.js" ><!-- defer: 돔 로드 후 실행 --></script>
   </head>
   <body>
     <button id="add">Add</button>
     <span>0</span>
     <button id="minus">minus</button>
-    <script defer src="static/vanila.js" ></script>
   </body>
 </html>
 
